--- a/Lab4/Assembly-CSharp.csproj
+++ b/Lab4/Assembly-CSharp.csproj
@@ -62,10 +62,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\ChangeVolume.cs" />
     <Compile Include="Assets\Cube.cs" />
     <Compile Include="Assets\easyTarget.cs" />
     <Compile Include="Assets\GunScript.cs" />
     <Compile Include="Assets\Menu.cs" />
+    <Compile Include="Assets\musicMenu.cs" />
     <Compile Include="Assets\SampleScenes\Menu\Scripts\MenuSceneLoader.cs" />
     <Compile Include="Assets\SampleScenes\Menu\Scripts\PauseMenu.cs" />
     <Compile Include="Assets\SampleScenes\Menu\Scripts\SceneAndURLLoader.cs" />
